# Glatteis

./: .gitignore  README.md  pyproject.toml
src/glatteis/: __init__.py  configs.py  geodata.py  recognizer.py  resolver.py  utils.py
tests/: test_configs.py  test_geodata.py  test_main.py
