[project]
name = "glatteis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Morley Weston", email = "118724731+morleyjamesweston@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flashtext>=2.7",
    "geopandas>=1.1.3",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pip>=26.0.1",
    "spacy>=3.8.11",
    "stanza>=1.11.1",
]

[project.scripts]
glatteis = "glatteis:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov=glatteis"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
